fixes text overflow for homepage overview

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -311,7 +311,7 @@ code {
     float: left;
     width: 75px;
     height: 75px;
-    margin: 5px 20px 0px 0px; }
+    margin: 5px 20px 70px 0px; }
   .overview .columns {
     margin-bottom: 100px; }
   .overview .medium-6 {
